force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Theme__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Theme__c</fullName>
    <description>https://eawebdev.atlassian.net/browse/T2-876</description>
    <inlineHelpText>Select which theme(s) this project aligns to.</inlineHelpText>
    <label>Theme Alignment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No theme alignment</fullName>
                <default>true</default>
                <label>No theme alignment</label>
            </value>
            <value>
                <fullName>A healthy, safe and equitable life course for everyone</fullName>
            </value>
            <value>
                <fullName>The production of quality foods &amp; medicines</fullName>
            </value>
            <value>
                <fullName>The protection &amp; restoration of vulnerable ecosystems</fullName>
            </value>
            <value>
                <fullName>Understanding &amp; preventing disease</fullName>
            </value>
            <value>
                <fullName>More just and equitable societies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>