force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Traffic_Light_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Traffic_Light_Status__c</fullName>
    <formula>IF( I_RS_Tasks_with_Milestone_Status_Red__c &gt; 0, &apos;Red&apos;,

IF (I_RS_Tasks_with_Milestone_Status_Yellow__c &gt; 0, &apos;Yellow&apos;,

IF (I_RS_Tasks_with_Milestone_Status_Green__c &gt; 0, &apos;Green&apos;,

&apos;&apos;

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Traffic Light Status</label>
    <type>Text</type>
</CustomField>