force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Turn_off_Validations__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Turn_off_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn off validations</description>
    <inlineHelpText>Turn off validations</inlineHelpText>
    <label>System administrators only</label>
    <type>Checkbox</type>
</CustomField>