force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Update_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Update_Approver_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is being updated by an approval process. If this field is set to TRUE, a process builder will be triggered that will then call a flow that updates the Approval Comments field</description>
    <label>Update Approver Comments</label>
    <type>Checkbox</type>
</CustomField>