force-app/main/default/objects/Project_Proposal__c/fields/I_RSFunding_Body_Client_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RSFunding_Body_Client_Reference_Number__c</fullName>
    <description>Funding Body/Client Reference Number</description>
    <inlineHelpText>Select the Funding body. If one does not exist, enter in the comments below.</inlineHelpText>
    <label>Funding Body/Client Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>