force-app/main/default/objects/Project_Proposal__c/fields/L_BAU_Date_outcome_notified__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Date_outcome_notified__c</fullName>
    <label>Date outcome notified</label>
    <type>Date</type>
</CustomField>