force-app/main/default/objects/Project_Proposal__c/fields/L_BAU_Unfunded_grant_collaboration__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Unfunded_grant_collaboration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unfunded grant/collaboration</label>
    <type>Checkbox</type>
</CustomField>