force-app/main/default/objects/Project_Proposal__c/fields/My_Project_Proposals__c.field-meta.xml
<CustomField>
    <fullName>My_Project_Proposals__c</fullName>
    <formula>IF(I_RS_Research_Office_Contact__c = $User.Id , TRUE , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Project Proposals</label>
    <type>Checkbox</type>
</CustomField>