force-app/main/default/objects/Project_Proposal__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <displayFormat>{YY}{0000}</displayFormat>
    <inlineHelpText>Autogenerated number for this Proposal/Project for reference use.</inlineHelpText>
    <label>Project Number</label>
    <type>AutoNumber</type>
</CustomField>