force-app/main/default/objects/Project_Proposal__c/fields/Total_of_FOR_Codes__c.field-meta.xml
<CustomField>
    <fullName>Total_of_FOR_Codes__c</fullName>
    <formula>IF(I_RS_Classification_Code_Percentage_Tota__c = 0 || ISBLANK(I_RS_Classification_Code_Percentage_Tota__c),
IMAGE(&quot;/resource/Progress_Zero&quot;, &quot;Zero&quot;),

IF(I_RS_Classification_Code_Percentage_Tota__c = 10,
IMAGE(&quot;/resource/Progress_Ten&quot;, &quot;Ten&quot;),

IF(I_RS_Classification_Code_Percentage_Tota__c = 20,
IMAGE(&quot;/resource/Progress_Twenty&quot;, &quot;Twenty&quot;),

IF(I_RS_Classification_Code_Percentage_Tota__c = 30,
IMAGE(&quot;/resource/Progress_Thirty&quot;, &quot;Thirty&quot;),

IF(I_RS_Classification_Code_Percentage_Tota__c = 40,
IMAGE(&quot;/resource/Progress_Forty&quot;, &quot;Forty&quot;),

IF(I_RS_Classification_Code_Percentage_Tota__c = 50,
IMAGE(&quot;/resource/Progress_Fifty&quot;, &quot;Fifty&quot;),

IF(I_RS_Classification_Code_Percentage_Tota__c = 60,
IMAGE(&quot;/resource/Progress_Sixty&quot;, &quot;Sixty&quot;),

IF(I_RS_Classification_Code_Percentage_Tota__c = 70,
IMAGE(&quot;/resource/Progress_Sixty&quot;, &quot;Seventy&quot;),

IF(I_RS_Classification_Code_Percentage_Tota__c = 80,
IMAGE(&quot;/resource/Progress_Eighty&quot;, &quot;Eighty&quot;),

IF(I_RS_Classification_Code_Percentage_Tota__c = 90,
IMAGE(&quot;/resource/Progress_Ninety&quot;, &quot;Ninety&quot;),

IF(I_RS_Classification_Code_Percentage_Tota__c = 100,
IMAGE(&quot;/resource/Progress_Hundred&quot;, &quot;Hundred&quot;),

IF(I_RS_Classification_Code_Percentage_Tota__c &gt; 100,
IMAGE(&quot;/resource/Progress_Alert&quot;, &quot;Warning&quot;, 27,27)&amp; &quot; Total of FOR Codes is more than 100%&quot;,


IMAGE(&quot;/resource/Progress_Zero&quot;, &quot;Zero&quot;)
))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <type>Text</type>
</CustomField>