force-app/main/default/objects/Project_Proposal__c/recordTypes/I_RS_Contract_client_template.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Contract_client_template</fullName>
    <active>true</active>
    <label>Contract (Client Template)</label>
</RecordType>