force-app/main/default/objects/Project_Proposal__c/recordTypes/I_RS_Contract_La_Trobe_template.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Contract_La_Trobe_template</fullName>
    <active>true</active>
    <label>Contract (La Trobe Template)</label>
</RecordType>