force-app/main/default/objects/Project_Proposal__c/recordTypes/I_RS_External_Grant.recordType-meta.xml
<RecordType>
    <fullName>I_RS_External_Grant</fullName>
    <active>true</active>
    <label>External Grant</label>
</RecordType>