force-app/main/default/objects/Project_Proposal__c/recordTypes/I_RS_Grant_with_limited_applications.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Grant_with_limited_applications</fullName>
    <active>true</active>
    <label>Grant with limited applications</label>
</RecordType>