force-app/main/default/objects/Project_Proposal__c/recordTypes/I_RS_Internal_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Internal_Pipeline</fullName>
    <active>true</active>
    <label>Internal Pipeline</label>
</RecordType>