force-app/main/default/objects/Project_Proposal__c/recordTypes/I_RS_Non_Public_Proposal.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Non_Public_Proposal</fullName>
    <active>true</active>
    <label>Non Public Proposal</label>
</RecordType>