force-app/main/default/objects/Project_Proposal__c/recordTypes/I_RS_Other_grants.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Other_grants</fullName>
    <active>true</active>
    <description>**To be deactivated after the deployment and data migration in production. This has been requested to be replaced as per T2-Grants Workflow Changes.</description>
    <label>Other grants</label>
</RecordType>