force-app/main/default/objects/Project_Proposal__c/recordTypes/I_RS_Project.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Project</fullName>
    <active>true</active>
    <label>Project</label>
</RecordType>