force-app/main/default/objects/Project_Proposal__c/recordTypes/I_RS_Proposal.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Proposal</fullName>
    <active>true</active>
    <label>Proposal</label>
</RecordType>