force-app/main/default/objects/Project_Proposal__c/recordTypes/I_RS_Recommendation.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Recommendation</fullName>
    <active>true</active>
    <label>Recommendation</label>
</RecordType>