force-app/main/default/objects/Project_Proposal__c/recordTypes/L_BAU_Consulting_Proposal_Non_Research.recordType-meta.xml
<RecordType>
    <fullName>L_BAU_Consulting_Proposal_Non_Research</fullName>
    <active>true</active>
    <label>Consulting Proposal - Non Research</label>
</RecordType>