force-app/main/default/objects/Project_Proposal__c/recordTypes/Placeholder.recordType-meta.xml
<RecordType>
    <fullName>Placeholder</fullName>
    <active>true</active>
    <label>Placeholder</label>
</RecordType>