force-app/main/default/objects/Project_Proposal__c/validationRules/Lock_TRIM_if_WBS_created_in_Fin.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_TRIM_if_WBS_created_in_Fin</fullName>
    <active>true</active>
    <description>This validation will not allow change to TRIM for the project if a WBS is already created in finance.
Only users with System Admin or Integration profile can override the above condition</description>
    <errorConditionFormula>AND (
ISCHANGED( I_RS_TRIM_File_Number__c ),
(I_RS_Count_of_WBS_created_in_Finance__c &gt; 0),

AND(
($Profile.Name &lt;&gt; &quot;System Administrator&quot;),
($Profile.Name &lt;&gt; &quot;LTU Integration&quot;)
)

)</errorConditionFormula>
    <errorDisplayField>I_RS_TRIM_File_Number__c</errorDisplayField>
    <errorMessage>Cannot modify TRIM File Number after creation of WBS in finance for the project</errorMessage>
</ValidationRule>