force-app/main/default/objects/Project_Proposal__c/validationRules/Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( I_RS_Status__c )&amp;&amp; 
ISPICKVAL(  I_RS_Status__c  , &quot;Review by Research Office&quot;)&amp;&amp; NOT(I_RS_I_Agree__c = TRUE)</errorConditionFormula>
    <errorDisplayField>I_RS_I_Agree__c</errorDisplayField>
    <errorMessage>Complete the Researcher Declaration by selecting “I Agree”.</errorMessage>
</ValidationRule>