force-app/main/default/objects/Project_Proposal__c/validationRules/More_Than_One_LCI_Submit_To_Reserach_Off.validationRule-meta.xml
<ValidationRule>
    <fullName>More_Than_One_LCI_Submit_To_Reserach_Off</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
( I_RS_Number_of_Lead_Chief_Investigator__c  &gt;  1),
ISCHANGED(I_RS_Status__c ) ,
ISPICKVAL( I_RS_Status__c , &quot;Review by Research Office&quot;) 
)</errorConditionFormula>
    <errorMessage>Project Proposal can have only one Lead Chief Investigator.</errorMessage>
</ValidationRule>