force-app/main/default/objects/Project_Proposal__c/validationRules/Provide_a_Dismissal_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Provide_a_Dismissal_Reason</fullName>
    <active>false</active>
    <description>Make Dismissal Reason mandatory when a Project Proposal is Dismissed</description>
    <errorConditionFormula>RecordType.Name  == &apos;Recommendation&apos; 
   &amp;&amp;  
ISPICKVAL(I_RS_Status__c , &apos;Dismissed&apos;)
   &amp;&amp;
ISPICKVAL(I_RS_Dismissal_Reason__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>I_RS_Dismissal_Reason__c</errorDisplayField>
    <errorMessage>Please provide a Dismissal Reason</errorMessage>
</ValidationRule>