force-app/main/default/objects/Project_Proposal__c/validationRules/Restrict_Manual_Status_to_Approval_Reser.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Manual_Status_to_Approval_Reser</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 $User.I_RS_Is_Researcher_User__c = &apos;1&apos;,
 NOT(I_RS_Approval_Flag__c ),
 ISCHANGED(I_RS_Status__c ), 
 ISPICKVAL( I_RS_Status__c , &apos;Approvals&apos;) 
)</errorConditionFormula>
    <errorMessage>For &apos;Approvals&apos; please reach out to &apos;Research Office Contact&apos;</errorMessage>
</ValidationRule>