force-app/main/default/objects/Project_Proposal__c/validationRules/Stop_Researcher_Closing_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Stop_Researcher_Closing_Project</fullName>
    <active>true</active>
    <description>This validation stops researcher closing a project or changing the status of a closed project</description>
    <errorConditionFormula>AND(

($User.I_RS_Is_Researcher_User__c = &apos;1&apos;),
(I_RS_Record_Type_Developer_Name__c  = &quot;I_RS_Project&quot;),
ISCHANGED( I_RS_Status__c ),

OR(
    ISPICKVAL(I_RS_Status__c , &quot;Project Closed&quot;),
   (TEXT(PRIORVALUE(I_RS_Status__c )) = &quot;Project Closed&quot;)
)
)</errorConditionFormula>
    <errorMessage>Please contact the Research Office to change the Project status.</errorMessage>
</ValidationRule>