force-app/main/default/objects/Project_Proposal__c/validationRules/Validate_Approver.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Approver</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

NOT(ISBLANK(I_RS_Second_Approver__c)),
NOT(ISBLANK( I_RS_First_Approver__c)),
(I_RS_Second_Approver__c = I_RS_First_Approver__c)
)</errorConditionFormula>
    <errorMessage>First Approver and Second Approver cannot be same</errorMessage>
</ValidationRule>