force-app/main/default/objects/Project_Proposal__c/validationRules/Validate_Researcher_Changing_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Researcher_Changing_Status</fullName>
    <active>true</active>
    <description>Researcher cannot change status past &quot;Review by Research Office&quot;</description>
    <errorConditionFormula>AND(
ISCHANGED(I_RS_Status__c),
( $User.I_RS_Is_Researcher_User__c  = &apos;1&apos;),
OR(

AND(
(I_RS_Record_Type_Developer_Name__c =  $CustomMetadata.Reseracher_PP_status_move_lock__mdt.I_RS_Contract_client_template.MasterLabel ),

(Contains($CustomMetadata.Reseracher_PP_status_move_lock__mdt.I_RS_Contract_client_template.PP_Denied_Status__c, &apos;||&apos;&amp;TEXT(I_RS_Status__c)&amp;&apos;||&apos;))
),

AND(
(I_RS_Record_Type_Developer_Name__c =  $CustomMetadata.Reseracher_PP_status_move_lock__mdt.I_RS_Contract_La_Trobe_template.MasterLabel ),

(Contains($CustomMetadata.Reseracher_PP_status_move_lock__mdt.I_RS_Contract_La_Trobe_template.PP_Denied_Status__c, &apos;||&apos;&amp;TEXT(I_RS_Status__c)&amp;&apos;||&apos;))
),

AND(
(I_RS_Record_Type_Developer_Name__c =  $CustomMetadata.Reseracher_PP_status_move_lock__mdt.I_RS_Grant_with_limited_applications.MasterLabel ),

(Contains($CustomMetadata.Reseracher_PP_status_move_lock__mdt.I_RS_Grant_with_limited_applications.PP_Denied_Status__c, &apos;||&apos;&amp;TEXT(I_RS_Status__c)&amp;&apos;||&apos;))
),

AND(
(I_RS_Record_Type_Developer_Name__c =  $CustomMetadata.Reseracher_PP_status_move_lock__mdt.I_RS_Non_Public_Proposal.MasterLabel ),

(Contains($CustomMetadata.Reseracher_PP_status_move_lock__mdt.I_RS_Non_Public_Proposal.PP_Denied_Status__c, &apos;||&apos;&amp;TEXT(I_RS_Status__c)&amp;&apos;||&apos;))
),

AND(
(I_RS_Record_Type_Developer_Name__c =  $CustomMetadata.Reseracher_PP_status_move_lock__mdt.I_RS_Notice_of_intention.MasterLabel ),

(Contains($CustomMetadata.Reseracher_PP_status_move_lock__mdt.I_RS_Notice_of_intention.PP_Denied_Status__c, &apos;||&apos;&amp;TEXT(I_RS_Status__c)&amp;&apos;||&apos;))
),

AND(
(I_RS_Record_Type_Developer_Name__c =  $CustomMetadata.Reseracher_PP_status_move_lock__mdt.I_RS_Other_grants.MasterLabel ),

(Contains($CustomMetadata.Reseracher_PP_status_move_lock__mdt.I_RS_Other_grants.PP_Denied_Status__c, &apos;||&apos;&amp;TEXT(I_RS_Status__c)&amp;&apos;||&apos;))
),


AND(
(I_RS_Record_Type_Developer_Name__c =  $CustomMetadata.Reseracher_PP_status_move_lock__mdt.I_RS_Proposal.MasterLabel ),

(Contains($CustomMetadata.Reseracher_PP_status_move_lock__mdt.I_RS_Proposal.PP_Denied_Status__c, &apos;||&apos;&amp;TEXT(I_RS_Status__c)&amp;&apos;||&apos;))
)

)
)</errorConditionFormula>
    <errorMessage>Please discuss the requested status change with the Research Office contact.</errorMessage>
</ValidationRule>