force-app/main/default/objects/Project_Proposal__c/validationRules/Zero_LCI_Count_on_Submit_to_Research.validationRule-meta.xml
<ValidationRule>
    <fullName>Zero_LCI_Count_on_Submit_to_Research</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( I_RS_LeadChiefInvestigator__c )</errorConditionFormula>
    <errorMessage>Please ensure Project Proposal has a Lead Chief Investigator</errorMessage>
</ValidationRule>