force-app/main/default/objects/Project_Proposal__c/listViews/Active_Proposals.listView-meta.xml
<ListView>
    <fullName>Active_Proposals</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Lead_Chief_Investigator__c</columns>
    <columns>Project_Number__c</columns>
    <columns>I_RS_Status__c</columns>
    <columns>I_RS_Research_Office_Contact__c</columns>
    <columns>I_RS_Account_Organisation__c</columns>
    <columns>I_RS_Project_Type__c</columns>
    <columns>I_RS_Project_Sub_type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Project_Proposal__c.Placeholder,Project_Proposal__c.I_RS_Project,Project_Proposal__c.I_RS_Recommendation</value>
    </filters>
    <filters>
        <field>I_RS_Reason_For_Not_Progressing__c</field>
        <operation>equals</operation>
    </filters>
    <label>Active Proposals</label>
</ListView>