force-app/main/default/objects/Project_Proposal__c/listViews/All_Contract_Project_Proposals.listView-meta.xml
<ListView>
    <fullName>All_Contract_Project_Proposals</fullName>
    <columns>NAME</columns>
    <columns>Project_Number__c</columns>
    <columns>I_RS_Lead_Chief_Investigator__c</columns>
    <columns>I_RS_Status__c</columns>
    <columns>I_RS_Research_Office_Contact__c</columns>
    <columns>I_RS_Account_Organisation__c</columns>
    <columns>I_RS_Project_Type__c</columns>
    <columns>I_RS_Project_Sub_type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project_Proposal__c.I_RS_Contract_client_template,Project_Proposal__c.I_RS_Contract_La_Trobe_template,Project_Proposal__c.I_RS_Proposal</value>
    </filters>
    <label>All Contract Project Proposals</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Vice_Chancellor</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>